@@ -2,19 +2,18 @@ package net.greenjab.fixedminecraft.registry.other;
 
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
-import net.minecraft.server.network.ServerPlayerEntity;
-
 import java.util.ArrayList;
 import java.util.List;
+import net.minecraft.server.level.ServerPlayer;
 
 public class BackupRespawn {
     public String name;
-    public ArrayList<ServerPlayerEntity.Respawn> respawns = new ArrayList<>();
+    public ArrayList<ServerPlayer.RespawnConfig> respawns = new ArrayList<>();
 
     public static final Codec<BackupRespawn> CODEC = RecordCodecBuilder.create(
             instance -> instance.group(
                             Codec.STRING.fieldOf("name").forGetter(backupRespawn -> backupRespawn.name),
-                            ServerPlayerEntity.Respawn.CODEC.listOf().optionalFieldOf("respawns", List.of()).forGetter( backupRespawn -> List.copyOf(backupRespawn.respawns))
+                            ServerPlayer.RespawnConfig.CODEC.listOf().optionalFieldOf("respawns", List.of()).forGetter( backupRespawn -> List.copyOf(backupRespawn.respawns))
                     ).apply(instance, BackupRespawn::new)
     );
 
@@ -22,30 +21,30 @@ public class BackupRespawn {
         this(name, new ArrayList<>());
     }
 
-    public BackupRespawn(String name, List<ServerPlayerEntity.Respawn> respawns){
+    public BackupRespawn(String name, List<ServerPlayer.RespawnConfig> respawns){
         this(name, new ArrayList<>(respawns));
     }
 
-    public BackupRespawn(String name, ArrayList<ServerPlayerEntity.Respawn> respawns){
+    public BackupRespawn(String name, ArrayList<ServerPlayer.RespawnConfig> respawns){
         this.name = name;
         this.respawns.addAll(respawns);
     }
 
-    public void pushRespawn(ServerPlayerEntity.Respawn respawn) {
+    public void pushRespawn(ServerPlayer.RespawnConfig respawn) {
         if (respawn == null) return;
-        for (ServerPlayerEntity.Respawn testRespawn : respawns) {
-            if (respawn.posEquals(testRespawn)) {
+        for (ServerPlayer.RespawnConfig testRespawn : respawns) {
+            if (respawn.isSamePosition(testRespawn)) {
                 respawns.remove(testRespawn);
                 break;
             }
         }
         respawns.add(respawns.size(), respawn);
-        if (respawns.size()>64) respawns.remove(0);
+        if (respawns.size()>64) respawns.removeFirst();
     }
 
-    public ServerPlayerEntity.Respawn popRespawn() {
+    public ServerPlayer.RespawnConfig popRespawn() {
         if (respawns.isEmpty()) return null;
-        return respawns.remove(respawns.size()-1);
+        return respawns.removeLast();
     }
     public int size(){
         return respawns.size();
